# cave-story-randomizer

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .tscrc.json  LICENSE  README.md  daily.sh  pyproject.toml  setup.cfg
.github/workflows/: daily.yml  python.yml
__pyinstaller/: __init__.py  hook-caver.py
caver/: conf.lua  main.lua  patcher.py  settings.lua  tsc_file.lua
caver/database/: location.lua  music.lua
caver/lib/: bit.lua
caver/schema/: __init__.py  schema.json  types.py  validator_with_default.py
caver/ui/: draw.lua  main.lua  sequence.lua  style.lua
cs-hacks/DrowningMimigaMask/: AnimationMyChar.txt  InitMyChar.txt  ProcessAir.txt  PutMyChar.txt
cs-hacks/IncreaseMAX_STRIP/: ActionStripper.txt  InitCreditScript.txt  LoadGenericDataMAX_STRIP.txt  Multi-File-List.txt  PutStripper.txt  ReleaseCreditScript.txt  RestoreStripper.txt  SetStripper.txt  StartCreditScript.txt
cs-hacks/Infinite Orgs/: InfiniOrg.xml
cs-hacks/InstantTextDisplay/: AutoSpeedText.xml
cs-hacks/MiscHexPatches/: DisableAntiAliasing (optional).txt  FixNegativeWeaponSlot.txt  FixSLPFlicker.txt  Misc.txt
cs-hacks/MultipleSLPs/: Patches.txt  Readme.txt
cs-hacks/NegativeVerticalCreditOffset/: ActionCredit_Read.txt
cs-hacks/RunWhenLosingFocus/: gameFocus.xml
cs-hacks/TitleScreenHash/: Titlescreen_Hash_Display_Patch.txt
cs-hacks/VersionFromFile/: version_from_file.txt
cs-hacks/credits-optimzations/: ActionStripper.txt  InitCreditScript.txt  Multi-File-List.txt  PutStripper.txt  RestoreStripper.txt  SetStripper.txt  StartCreditScript.txt
docs/: csresearch.md  csresearch.txt  flag_listing.tsv  flag_listing.txt  item locations.txt  tsc notes.txt
pre-edited-cs/: 290.rec  __init__.py
pre-edited-cs/data/: ArmsItem.tsc  Credit.tsc  Head.tsc  casts.pdn  npc.tbl  stage.tbl
pre-edited-cs/data/ScriptSource/: ArmsItem.txt  Credit.txt  Head.txt
pre-edited-cs/data/Stage/: 0.tsc  Almond.pxe  Almond.tsc  Ballo1.pxe  Ballo1.tsc  Ballo2.tsc  Barr.pxe  Barr.tsc  Blcny1.pxe  Blcny1.tsc  Blcny2.pxe  Blcny2.tsc  Cave.pxe  Cave.tsc  Cemet.tsc  Cent.pxe  Cent.tsc  CentW.tsc  Chako.pxe  Chako.tsc  Comu.tsc  Curly.tsc  CurlyS.tsc  Drain.pxe  Drain.tsc  EggR2.pxe  EggR2.tsc  EggX.tsc  EggX2.tsc  Eggs.tsc  Eggs2.tsc  Fall.tsc  Frog.pxe  Frog.tsc  Gard.tsc  Hell1.pxe  Hell1.tsc  Hell2.pxe  Hell3.pxe  Hell3.tsc  (+62 more)
pre_edited_cs/: __init__.py
pre_edited_cs/__pyinstaller/: hook-pre-edited-cs.py
pre_edited_cs/data/: ArmsItem.tsc  Head.tsc
pre_edited_cs/data/ScriptSource/: ArmsItem.txt  Head.txt
pre_edited_cs/data/Stage/: Cemet.tsc  Cent.tsc  CentW.tsc  Chako.tsc  Clock.tsc  Comu.tsc  Curly.tsc  CurlyS.tsc  Egg6.tsc  Eggs.tsc  Frog.tsc  Jail1.tsc  Jenka1.tsc  Jenka2.tsc  Lounge.tsc  MazeI.tsc  MazeO.tsc  Mimi.tsc  Momo.tsc  Pens1.tsc  Pole.tsc  Pool.tsc  Prefa2.tsc  Priso2.tsc  Weed.tsc  WeedB.tsc
pre_edited_cs/freeware/: settings.ini
pre_edited_cs/freeware/data/: Credit.tsc  uuid.txt  version.txt
pre_edited_cs/tweaked/: CSTweaked  licence.txt
src/: .travis.yml  conf.lua  daily.sh  draw.lua  item_deck.lua  layout.lua  log.lua  main.lua  pxm_file.lua  randomizer.lua  settings.lua  style.lua  tsc_file.lua  util.lua
src/database/: Cave.pxm  items.lua  location.lua  locations.lua  music.lua  region.lua  world_graph.lua
src/lib/: classic.lua  moses.lua  terebi.lua
src/ui/: draw.lua  main.lua  music.lua  sequence.lua  settings.lua  style.lua
(+510 files in other folders)
