[build-system]
requires = ["setuptools>=44.0.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file_template = "v{scm_version.tag}.{scm_version.distance}\n2019/03/07 - {scm_version.node_date.year:04}/{scm_version.node_date.month:02}/{scm_version.node_date.day:02}\nduncathan_salt"
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"
version_file = "pre_edited_cs/data/version.txt"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C90", "I", "UP"]
src = ["src"]

# Version to target for generated code.
target-version = "py310"

[tool.mypy]
files = [
    "caver/patcher.py",
]
follow_imports = "silent"
disallow_untyped_defs = true