[metadata]
name = cave-story-randomizer
description = An open source randomizer patcher for Cave Story.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cave-story-randomizer/cave-story-randomizer/tree/patcher
author = duncathan salt

classifiers =
    License :: OSI Approved :: zlib/libpng License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Other Scripting Engines

[options]
packages = find:
install_requires =
    lupa>=1.10

include_package_data = True
zip_safe = False
python_requires = >=3.9
