[metadata]
name = cave-story-randomizer
description = An open source randomizer patcher for Cave Story.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cave-story-randomizer/cave-story-randomizer/tree/patcher
author = duncathan salt

classifiers =
    License :: OSI Approved :: zlib/libpng License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Other Scripting Engines

[options]
packages = find:
install_requires =
    lupa>=1.10

include_package_data = True
zip_safe = False
python_requires = >=3.9

#
# Entry Points for PyInstaller
# ---------------------------------
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = pre_edited_cs.__pyinstaller:get_hook_dirs